# dispatch-monitoring

./: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  app-menu.py  config.yml  docker-compose.yml  instruction.md  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
models/: best-cls.pt
runs/classify/train/: args.yaml  results.csv
runs/classify/train/weights/: last.pt
runs/detect/train/: args.yaml  results.csv
scripts/: setup_dev.py
tests/: __init__.py  test_utils.py
